<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".auth.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_background"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:paddingLeft="21dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/m_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_background"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/mpin"
            android:inputType="numberPassword"
            android:paddingStart="21dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/open_sans_semibold"
        android:letterSpacing="0.2"
        android:text="@string/sign_in"
        android:textColor="@color/blue" />

    <ImageView
        android:id="@+id/fingerprint_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/use_your_fingerprint_to_login"
        android:src="@drawable/fingerprint_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:lineSpacingMultiplier="1.33"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/use_your_fingerprint_to_login"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>