<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="39dp"
    android:layout_marginTop="25dp"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="#949CA5"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:text="@string/url"/>
    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:background="@drawable/site_edittext_background"
        android:paddingStart="20dp"
        android:textSize="16sp"
        android:textColor="#3C4858"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="11dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="#949CA5"
        android:layout_marginTop="20dp"
        android:text="@string/site_name"/>
    <EditText
        android:id="@+id/site_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/site_edittext_background"
        android:paddingStart="20dp"
        android:textSize="16sp"
        android:textColor="#3C4858"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="11dp"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="#949CA5"
        android:layout_marginTop="20dp"
        android:text="@string/sector_or_folder"/>
    <AutoCompleteTextView
        android:id="@+id/sector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/site_edittext_background"
        android:paddingStart="20dp"
        android:textSize="16sp"
        android:textColor="#3C4858"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="11dp"
        android:paddingRight="20dp"
        android:drawableRight="@drawable/ic_arrow_down"
        android:dropDownHeight="100dp"
        android:overScrollMode="ifContentScrolls"
        android:cursorVisible="false"
        android:maxLines="1"
        android:focusable="true"
        android:clickable="true"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="#949CA5"
        android:layout_marginTop="20dp"
        android:text="@string/user_name"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/site_edittext_background"
        android:paddingStart="20dp"
        android:textSize="16sp"
        android:textColor="#3C4858"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="11dp"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="#949CA5"
        android:layout_marginTop="20dp"
        android:text="@string/site_password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/site_edittext_background"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textColor="#3C4858"
            android:fontFamily="@font/open_sans"
            android:layout_marginTop="11dp"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/password_strength"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:progress="0"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="-4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        android:textColor="#949CA5"
        android:layout_marginTop="20dp"
        android:text="@string/notes" />
    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@drawable/site_edittext_background"
        android:paddingStart="20dp"
        android:textSize="16sp"
        android:textColor="#3C4858"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="11dp"/>

</LinearLayout>