<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".auth.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_background"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/enter_mobile_number"
            android:inputType="number"
            android:paddingLeft="21dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/m_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_background"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/enter_mpin"
            android:inputType="numberPassword"
            android:paddingStart="21dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/re_enter_m_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_background"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/re_enter_mpin"
            android:inputType="numberPassword"
            android:paddingLeft="21dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/open_sans_semibold"
        android:letterSpacing="0.2"
        android:text="@string/sign_up"
        android:textColor="@color/blue" />

</LinearLayout>