<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1FB3B3B3"
    tools:context=".MainActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/sites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/sites"
        android:textColor="#3C4857"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar"/>
    <View
        android:layout_width="29dp"
        android:layout_height="3dp"
        android:background="#FFA136"
        app:layout_constraintLeft_toLeftOf="@+id/sites_text"
        app:layout_constraintTop_toBottomOf="@id/sites_text"/>
    <Spinner
        android:id="@+id/sector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sector_spinner_background"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:gravity="right"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/type_keywords_to_search"
        android:background="@drawable/text_input_background"
        android:cursorVisible="false"
        android:maxLines="1"
        android:focusable="true"
        android:clickable="true"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:fontFamily="@font/open_sans"
        android:hint="@string/type_keywords_to_search"
        android:inputType="text"
        android:paddingVertical="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="#B3B3B3"
        android:textColor="#B3B3B3"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/site_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#0E85FF"
        android:contentDescription="@string/add_new_site"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>